lobbyv2 and serverhelper